# shellsh

./: .gitignore  .pypirc.template  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
shellsh/: __init__.py  shellsh.py
